--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_C_STANDARD 99)
 add_executable(dot 
     ${CMAKE_SOURCE_DIR}/app/rl/main.c
     ${CMAKE_SOURCE_DIR}/client/settings.c
+    ${CMAKE_SOURCE_DIR}/utils/file.c
     ${CMAKE_SOURCE_DIR}/deps/cJSON/cJSON.c
 )
 
@@ -21,6 +22,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/client
     ${CMAKE_SOURCE_DIR}/server
     ${CMAKE_SOURCE_DIR}/shared
+    ${CMAKE_SOURCE_DIR}/utils
     ${CMAKE_SOURCE_DIR}/deps/raylib/src
     ${CMAKE_SOURCE_DIR}/deps/cJSON
 )
