--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(dot
     ${CMAKE_SOURCE_DIR}/app/rl/main.c
     ${CMAKE_SOURCE_DIR}/app/rl/gui.c
     ${CMAKE_SOURCE_DIR}/app/rl/render.c
+    ${CMAKE_SOURCE_DIR}/client/assets.c
     ${CMAKE_SOURCE_DIR}/client/settings.c
     ${CMAKE_SOURCE_DIR}/utils/file.c
     ${CMAKE_SOURCE_DIR}/deps/cJSON/cJSON.c
