--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,13 @@ add_executable(dot
     ${CMAKE_SOURCE_DIR}/app/rl/gui.c
     ${CMAKE_SOURCE_DIR}/app/rl/render.c
     ${CMAKE_SOURCE_DIR}/app/rl/input.c
+
     ${CMAKE_SOURCE_DIR}/client/assets.c
     ${CMAKE_SOURCE_DIR}/client/settings.c
+
+    ${CMAKE_SOURCE_DIR}/shared/game.c
+    ${CMAKE_SOURCE_DIR}/shared/tile.c
+
     ${CMAKE_SOURCE_DIR}/utils/file.c
     ${CMAKE_SOURCE_DIR}/deps/cJSON/cJSON.c
 )
